# ReVisiON

./: .gitignore  package-lock.json  package.json  screenshot_query.html  tailwind.config.js  tsconfig.json  vite.config.ts
Prompt/: R1.md  V1.md
Working/: Chat.md  section1.md
prompt/ProjectDetails/: Tech.md
prompt/auth/: prompt
prompt/html_example/: 1.html  html
src/: App.css  App.tsx  App.tsx.backup2chatpageuseless  index.css  main.tsx  screenshot_query_main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: auth.rs  lib.rs  main.rs
src-worker/: .gitignore  package-lock.json  package.json  tsconfig.json
src-worker/src/: auth.ts  db.ts  index.ts  types.ts  utils.ts
src-worker/src/db/: schema.sql
src-worker/tests/: .env.test  auth.test.ts  package-lock.json  package.json  query.test.ts  setupTests.ts  sync-user.test.ts  vitest.config.ts
src-worker/tests/mocks/: handlers.ts  server.ts
src/app/: layout.tsx  page.tsx
src/app/feedback/: page.tsx
src/app/help/: page.tsx
src/app/history/: page.tsx
src/app/profile/: page.tsx
src/app/settings/: page.tsx
src/app/topics/: page.tsx
src/components/CustomCodeBlock/: CustomCodeBlock.tsx  (+1 more)
src/core/: tray.ts
src/hooks/: useAuth.ts  useGitHubAuth.ts
src/login/: GitHubAuth.tsx
src/screenshot/: ScreenshotPage.tsx  query.css  query.tsx
src/store/: authStore.ts
src/stores/: authStore.ts
src/types/: auth.ts  chat.ts
worker_auth/: package-lock.json  package.json  schema.sql  wrangler.jsonc
worker_auth/src/: index.ts  types.ts
(+12 files in other folders)
