[package]
name = "obtainosinfo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "obtainosinfo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"

#For github auth
reqwest = { version = "0.12.15", features = ["json"] }
url = "2.5.4"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["cors"] }
once_cell = "1.21.3"
thiserror = "2.0.12"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
tauri-plugin-screenshots = "2.1.0"
tauri-plugin-macos-permissions = "2.2.0"
tauri-plugin-deep-link = "2"
[features]
with-devtools = ["tauri/devtools"]
